	*	 Windows-specific changes to R		 *
	*	 See the file NEWS for changes that	 *
	*        affect all versions of R.		 *
	**************************************************

	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0

NEW FEATURES

    o	memory.size() and memory.limits() now return rounded values.




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.0

NEW FEATURES

    o	Rterm --ess sets stdout to be unbuffered, as it would be for
	output to a terminal.

    o	windows() gains a new argument 'clickToConfirm', default TRUE,
	which controls if new-frame confirmation is done via clicking
	(or ENTER) on the window (the recent default) or via a
	question in the console (the default for other interactive
	devices).  The non-default behaviour may be useful when R is
	driven indirectly (e.g. via ESS) and for some Rterm users.

    o	If the HOME environment variable is not set, Rgui and Rterm
	will set it to match R_USER (as Rcmd does).

    o	The graphics devices bmp, jpeg, png, tiff and win.metafile
	perform tilde-expansion on their 'filename' argument.  Also
	savePlot.


UTILITIES

    o	Rcmd sets many more enviroment variables, including all those
	set by R CMD under a Unix-alike which make sense on Windows.

    o	Rcmd now follows a similar strategy to R when finding a valid
	TMPDIR setting: it tries TMPDIR, TMP, TEMP and R_USER looking
	for a directory -- the last will succeed as it does for R.

    o	Rcmd has a new utility open.exe to open files via their file
    	associations.

    o	Rcmd Rd2dvi now opens .dvi and .pdf files via their file
    	associations (if set -- MiKTeX sets 'yap' for .dvi).

    o	Rcmd check now checks the latex of any package vignettes if